--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.11.3",
     "glightbox": "^3.3.0",
     "leaflet": "^1.9.4",
+    "mone-tailwind": "file:",
     "next": "^15.3.1",
     "nodemailer": "^6.9.16",
     "react": "^19.0.0-rc-66855b96-20241106",
